src/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kinspect-api
  labels:
    app: kinspect-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kinspect-api
  template:
    metadata:
      labels:
        app: kinspect-api
    spec:
      containers:
        - name: kinspect-api
          image: vmyronovych/kinspect-api:e7a7a6a
          ports:
            - containerPort: 8080  # Expose container on port 8080
