src/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kinspect-api
spec:
  selector:
    app: kinspect-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
    - name: http-envoy-prom
      protocol: TCP
      port: 15090
      targetPort: 15090
