src/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kinspect-gateway
spec:
  selector:
    istio: ingressgateway  # Use Istio's default ingress gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "kinspect.api.local"  # Host you want to expose
