src/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kinspect-api
spec:
  hosts:
    - "kinspect.api.local"  # Match this with the host in your Gateway
  gateways:
    - kinspect-gateway  # Reference to the Gateway
  http:
    - name: http-app
      match:
        - uri:
            prefix: /  # Match all paths for application traffic
      route:
        - destination:
            host: kinspect-api
            port:
              number: 8080  # Application port (http-app)
            subset: stable
          weight: 100
        - destination:
            host: kinspect-api
            port:
              number: 8080
            subset: canary
          weight: 0
